# Canvas-TodoistIntegration

./: .breakpoints  .replit  main.py  pyproject.toml
src/: canvas.py  todoist.py
